--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/node": "^14.11.9",
     "antd": "^4.7.2",
-    "node-sass": "^5.0.0",
     "rc-tween-one": "^2.7.3",
     "react": "^16.13.0",
     "react-dom": "^17.0.1",
@@ -52,6 +51,7 @@
     "eslint": "^7.12.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.21.5",
-    "random-name": "^0.1.2"
+    "random-name": "^0.1.2",
+    "sass": "^1.30.0"
   }
 }
